feat: add 3 new recipes
Added recipe on page lasagne, added page and
recipe for orzo with shrimps and surinam bami.
The list of recipes is getting longer and longer!

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <h1>Odin Recipes</h1>
 <ul>
     <li>
-        <a href="/recipes/lasagne.html">Lasagne</a>
+        <a href="recipes/lasagne.html">Lasagne</a>
+    </li>
+    <li>
+        <a href="recipes/orzo-met-garnalen.html">Orzo met garnalen</a>
+    </li>
+    <li>
+        <a href="recipes/surinaamse-bami.html">Surinaamse bami</a>
     </li>
 </ul>
 </main>
