--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 
 <head>
     <meta charset="UTF-8">
-    <title>Lasagne</title>
+    <title>Lasagne bolognese</title>
 </head>
 
 <body>
@@ -12,8 +12,114 @@
     </header>
     <main>
         <h1>Lasagne</h1>
-    <img src="" alt="Lasagne">
-    
+    <img src="../images/lasagne_bolognese.jpg" alt="Lasagne bolognese" width="500">
+    <p>
+       Lasagne: de bechamelsaus maakt 'm romig en houdt de laagjes bij elkaar. Ook fijn: lasagne kun je prima invriezen. Tip: vries 'm in porties in, dan kun je er meerdere dagen van genieten. 
+    </p>
+    <h2>Ingrediënten</h2>
+    <ul>
+        <li>
+           1 middelgrote ui 
+        </li>
+        <li>
+            1 teen knoflook
+        </li>
+        <li>
+            100 g bleekselderij
+        </li>
+        <li>
+            100 g winterpenen
+        </li>
+        <li>
+            1½ el milde olijfolie
+        </li>
+        <li>
+            75 g panetta
+        </li>
+        <li>
+            500 g half-om-halfgehakt
+        </li>
+        <li>
+            1 el tomatenpuree
+        </li>
+        <li>
+            700 ml volle melk
+        </li>
+        <li>
+            500 g passata
+        </li>
+        <li>
+            50 g ongezouten roomboter
+        </li>
+        <li>
+            60 g tarwebloem
+        </li>
+        <li>
+            100 g Parmigiano Reggiano
+        </li>
+        <li>
+            250 g verse lasagne all&apos;uovo
+        </li>
+        <li>
+            Splash wijn naar keuze
+        </li>
+    </ul>
+    <h2>
+        Bereiden
+    </h2>
+    <ol>
+        
+        <li>
+            Zonder olie en start in een koude pan: bak de pancetta krokant en verwijder. 
+        </li>
+        <li>
+            Snipper de ui en snijd de knoflook fijn. Snijd de bleekselderij en wortel in blokjes van een ½ cm. 
+        </li>
+        <li>
+            Verhit de olie in een hapjespan en fruit de ui, knoflook, wortel en selderij ca 5 min tot glazig.
+        </li>
+        <li>
+            Voeg het gehakt toe en bak op middelhoog vuur in 5 min. rul. Geef het gehakt hierbij kans om te bruinen.
+        </li>
+        <li>
+            Voeg de tomatenpuree toe en bak 2 min. mee. 
+        </li>
+        <li>
+            Voeg 200 ml melk toe en laat al roerend op hoog vuur bijna helemaal inkoken, dit duurt ca. 5 min.
+        </li>
+        <li>
+            Doe de pancetta terug in de pan. Voeg de passata, wijn, en eventueel de korst van de parmezaanse kaas toe.
+        </li>
+        <li>
+            Laat dit ca 45 minuten zachtjes inkoken.
+        </li>
+             <li>
+            Maak ondertussen de bechamelsaus. Smelt op laag vuur de boter in een steelpan met dikke bodem. Meng de bloem erdoor en laat op laag vuur 3 min. gaar worden. Voeg al roerend met een garde de rest van de melk in delen toe. 
+        </li>
+        <li>
+            Breng aan de kook. Laat de saus op laag vuur 2- 3 min. zachtjes koken. Breng op smaak met peper, nootmuskaat en eventueel zout.
+
+        </li>
+        <li>
+            Verwarm de oven voor op 180 °C. 
+        </li>
+        <li>
+            Rasp de Parmezaanse kaas. 
+        </li>
+        <li>
+            Maak laagjes in de ovenschaal van achtereenvolgens de tomatensaus (zorg dat je de korst van de parmezaanse kaas eruit vist), lasagnebladen, tomatensaus, bechamelsaus en ¼ van de geraspte kaas. Herhaal 2 tot 3 keer en eindig met een
+laagje bechamelsaus en de rest van de geraspte kaas.
+
+        </li>
+        <li>
+            Bak de lasagne 25-35 min. in het midden van de oven. 
+
+        </li>
+    </ol>
+    <h2>Bewaren</h2>
+    <p>
+        Bewaartip: Een portie lasagne over? Laat het voor het invriezen helemaal afkoelen. Dek de schaal dan goed af met vershoudfolie en zet in de vriezer. Haal de lasagne de avond van tevoren uit de vriezer en zet in de koelkast. Warm de lasagne afgedekt met aluminiumfolie op in de oven (ca. 20 min. op 180 °C).
+    </p>
     </main>
     <footer>
 
