feat: add basic styling to main page and recipes
the pages were looking boring. Adding these basic
styles will change this a bit at least

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
     <header>
+        <h1>Odin Recipes</h1>
     </header>
 <main>
-<h1>Odin Recipes</h1>
+<div class="main-recipe">
 <ul>
     <li>
         <a href="recipes/lasagne.html">Lasagne</a>
@@ -20,6 +22,7 @@
         <a href="recipes/surinaamse-bami.html">Surinaamse bami</a>
     </li>
 </ul>
+</div>
 </main>
 <footer>
 
