--- a/recipes/orzo-met-garnalen.html
+++ b/recipes/orzo-met-garnalen.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lasagne</title>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
@@ -11,38 +12,62 @@
         <a href="../index.html">Home</a>
     </header>
     <main>
-        <h1>Orzo met garnalen</h1>
-        <img src="../images/garnalen-orzo.png" alt="Orzo met garnalen" width="500">
-        <p>
-            Orzo met garnalen en feta. Meer dan 30 minuten heb je niet nodig voor dit heerlijke en gezonde gerecht!
-        </p>
-        <h2>Ingrediënten</h2>
-        <ul>
-            <li>
-                2 el olijfolie</li>
- <li>2 teentjes knoflook (in plakjes)</li>
- <li>snuf gedroogde chilivlokken</li>
- <li>1 blik cherrytomaten (400 g)</li>
- <li>zout en peper</li>
- <li>100 g orzo</li>
- <li>200 g grote garnalen (rauw gepeld en opengesneden)</li>
- <li>100 g feta</li>
- <li>handvol dille (grof gehakt)</li>
- <li>½ citroen (in partjes)</li>
-        </ul>
-        <h2>Bereiden</h2>
-        <ol>
-            <li>Verhit de olie in een hapjespan met deksel en fruit er de knoflook en de chilivlokken 2-3 minuten in. </li>
-        <li>Blus af met de tomaten en 200 ml water. Voeg een snuf zout en peper toe en breng aan de kook. </li>
-    <li>Kook onafgedekt ca. 20 minuten tot de saus ingedikt is. </li>    
-    <li>Kook intussen de orzo volgens de aanwijzingen op de verpakking in water met wat zout. Giet af.</li>
-    <li>Voeg de garnalen toe aan de tomatensaus en kook 2-3 minuten verder tot de garnalen roze kleuren. </li>
-    <li>Verkruimel de feta erboven, leg een deksel op de pan en verwarm nog 2-3 minuten op laag vuur tot de feta zacht begint te worden. </li>
-    <li>Verdeel de orzo over twee borden en schep de garnalen in tomatensaus erover. Garneer met de dille en serveer met de citroenpartjes.
-</li>
-    </ol>
-    <h2>Bewaren</h2>
-    <p>Liever niet. Als het toch moet, in een luchtdichtbakje, opwarmen in de koekenpan.</p>
+
+        <div class="intro">
+            <div>
+                <h1>Orzo met garnalen</h1>
+                <p>
+                    Orzo met garnalen en feta. Meer dan 30 minuten heb je niet nodig voor dit heerlijke en gezonde
+                    gerecht!
+                </p>
+            </div>
+            <img src="../images/garnalen-orzo.png" alt="Orzo met garnalen" width="500">
+        </div>
+
+        <div class="main-recipe">
+            <div class="sub1">
+                <div>
+                    <h2>Ingrediënten</h2>
+                    <ul>
+                        <li>
+                            2 el olijfolie</li>
+                        <li>2 teentjes knoflook (in plakjes)</li>
+                        <li>snuf gedroogde chilivlokken</li>
+                        <li>1 blik cherrytomaten (400 g)</li>
+                        <li>zout en peper</li>
+                        <li>100 g orzo</li>
+                        <li>200 g grote garnalen (rauw gepeld en opengesneden)</li>
+                        <li>100 g feta</li>
+                        <li>handvol dille (grof gehakt)</li>
+                        <li>½ citroen (in partjes)</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Bereiden</h2>
+                    <ol>
+                        <li>Verhit de olie in een hapjespan met deksel en fruit er de knoflook en de chilivlokken 2-3
+                            minuten in. </li>
+                        <li>Blus af met de tomaten en 200 ml water. Voeg een snuf zout en peper toe en breng aan de
+                            kook. </li>
+                        <li>Kook onafgedekt ca. 20 minuten tot de saus ingedikt is. </li>
+                        <li>Kook intussen de orzo volgens de aanwijzingen op de verpakking in water met wat zout. Giet
+                            af.</li>
+                        <li>Voeg de garnalen toe aan de tomatensaus en kook 2-3 minuten verder tot de garnalen roze
+                            kleuren. </li>
+                        <li>Verkruimel de feta erboven, leg een deksel op de pan en verwarm nog 2-3 minuten op laag vuur
+                            tot de feta zacht begint te worden. </li>
+                        <li>Verdeel de orzo over twee borden en schep de garnalen in tomatensaus erover. Garneer met de
+                            dille en serveer met de citroenpartjes.
+                        </li>
+                    </ol>
+                </div>
+                </div>
+                <div>
+                    <h2>Bewaren</h2>
+                    <p>Liever niet. Als het toch moet, in een luchtdichtbakje, opwarmen in de koekenpan.</p>
+                </div>
+            
+        </div>
     </main>
     <footer>
 
