--- a/recipes/surinaamse-bami.html
+++ b/recipes/surinaamse-bami.html
@@ -1,87 +1,129 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
+
 <body>
     <header>
-<a href="../index.html">Home</a>
+        <a href="../index.html">Home</a>
     </header>
     <main>
-      <h1>Surinaamse bami</h1>
-    <img src="../images/surinaamse-bami.jpg" alt="Surinaamse bami" width="500">
-    <p>Deze zelfgemaakte bami geef je een Surinaamse twist. Wist je dat ze daar vaak spaghetti voor gebruiken in plaats van mie?</p>
-    <h2>Ingrediënten</h2>
-    <p>4 personen</p>
-    <ul>
-        <li>
-2 ui
-        </li>
-        <li>
-4 tenen knoflook
-        </li>
-        <li>
-4 cm gember
-        </li>
-        <li>
-2 komkommer
-        </li>
-        <li>
-            360 gram spaghetti
-        </li>
-        <li>
-            5 gram laos
-        </li>
-        <li>
-            600 gram kipdijreepjes met kruiden
-        </li>
-        <li>
-            3 eetlepels tomatenpuree
-        </li>
-        <li>
-            40 ml sojasaus
-        </li>
-        <li>
-            20 gram bladselderij
-        </li>
-        <li>
-            2 el ketjap manis
-        </li>
-        <li>
-            2 el zonnebloemolie
-        </li>
-        <li>
-            1/2 blokje runderboullion
-        </li>
-        <li>
-            4 el witte wijnazijn
-        </li>
-        <li>
-            2 el suiker
-        </li>
-        <li>
-            peper en zout
-        </li>
-    </ul>
-    <ol>
-        <li>
-            Breng ruim water met een flinke snuf zout aan de kook in een pan met deksel voor de spaghetti. Snipper de ui. Pers de knoflook of snijd fijn. Rasp de gember fijn. ﻿Halveer de komkommer in de lengte. Verwijder met een theelepel de zaadlijsten en snijd beide helften van de komkommer in dunne plakken.
-        </li>
-    <li>
-Maak in een saladekom een zoetzure dressing van per persoon: 1 el wittewijnazijn en 1/2 el suiker. Meng de komkommer met de zoetzure dressing. Schep goed om. Kook de spaghetti, afgedekt, 10 - 12 minuten in de pan met deksel. Giet daarna af, maar bewaar wat van het kookvocht. Verhit 1/2 el zonnebloemolie per persoon in een wok op middelhoog vuur. Bak de knoflook, ui, gember en gedroogde laos 2 - 3 minuten aan.
-    </li>
-    <li>
-        Voeg de kippendijreepjes toe aan de wok en bak nog 4 - 6 minuten. Voeg de tomatenpuree en de sojasaus toe aan de wok met kippendijreepjes. Voeg vervolgens ook per persoon: 1/2 el ketjap en 1/8 bouillonblokje toe. Bak het geheel al roerend nog 1 minuut in de wok. Voeg tot slot ook de gekookte spaghetti toe en meng alles goed door elkaar. Voeg eventueel wat van het bewaarde kookvocht toe als de bami te droog lijkt.
-    </li>
-    <li>
-        Snijd het verse selderijblad fijn. Verdeel de bami over de borden en garneer met de selderij. Serveer de zoetzure komkommersalade erbij.
-    </li>
-    </ol>
+        <div class="intro">
+            <div>
+                <h1>Surinaamse bami</h1>
+                <p>Deze zelfgemaakte bami geef je een Surinaamse twist. Wist je dat ze daar vaak spaghetti voor
+                    gebruiken in
+                    plaats van mie?</p>
+            </div>
+            <div>
+                <img src="../images/surinaamse-bami.jpg" alt="Surinaamse bami" width="500">
+            </div>
+        </div>
+        <div class="main-recipe">
+            <div class="sub1">
+                <div>
+                    <h2>Ingrediënten</h2>
+                    <p>4 personen</p>
+                    <ul>
+                        <li>
+                            2 ui
+                        </li>
+                        <li>
+                            4 tenen knoflook
+                        </li>
+                        <li>
+                            4 cm gember
+                        </li>
+                        <li>
+                            2 komkommer
+                        </li>
+                        <li>
+                            360 gram spaghetti
+                        </li>
+                        <li>
+                            5 gram laos
+                        </li>
+                        <li>
+                            600 gram kipdijreepjes met kruiden
+                        </li>
+                        <li>
+                            3 eetlepels tomatenpuree
+                        </li>
+                        <li>
+                            40 ml sojasaus
+                        </li>
+                        <li>
+                            20 gram bladselderij
+                        </li>
+                        <li>
+                            2 el ketjap manis
+                        </li>
+                        <li>
+                            2 el zonnebloemolie
+                        </li>
+                        <li>
+                            1/2 blokje runderboullion
+                        </li>
+                        <li>
+                            4 el witte wijnazijn
+                        </li>
+                        <li>
+                            2 el suiker
+                        </li>
+                        <li>
+                            peper en zout
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Bereiden</h2>
+                    <ol>
+                        <li>
+                            Breng ruim water met een flinke snuf zout aan de kook in een pan met deksel voor de
+                            spaghetti. Snipper
+                            de ui. Pers de knoflook of snijd fijn. Rasp de gember fijn. ﻿Halveer de komkommer in de
+                            lengte.
+                            Verwijder met een theelepel de zaadlijsten en snijd beide helften van de komkommer in dunne
+                            plakken.
+                        </li>
+                        <li>
+                            Maak in een saladekom een zoetzure dressing van per persoon: 1 el wittewijnazijn en 1/2 el
+                            suiker. Meng
+                            de komkommer met de zoetzure dressing. Schep goed om. Kook de spaghetti, afgedekt, 10 - 12
+                            minuten in de
+                            pan met deksel. Giet daarna af, maar bewaar wat van het kookvocht. Verhit 1/2 el
+                            zonnebloemolie per
+                            persoon in een wok op middelhoog vuur. Bak de knoflook, ui, gember en gedroogde laos 2 - 3
+                            minuten aan.
+                        </li>
+                        <li>
+                            Voeg de kippendijreepjes toe aan de wok en bak nog 4 - 6 minuten. Voeg de tomatenpuree en de
+                            sojasaus
+                            toe aan de wok met kippendijreepjes. Voeg vervolgens ook per persoon: 1/2 el ketjap en 1/8
+                            bouillonblokje toe. Bak het geheel al roerend nog 1 minuut in de wok. Voeg tot slot ook de
+                            gekookte
+                            spaghetti toe en meng alles goed door elkaar. Voeg eventueel wat van het bewaarde kookvocht
+                            toe als de
+                            bami te droog lijkt.
+                        </li>
+                        <li>
+                            Snijd het verse selderijblad fijn. Verdeel de bami over de borden en garneer met de
+                            selderij. Serveer de
+                            zoetzure komkommersalade erbij.
+                        </li>
+                    </ol>
+                </div>
+            </div>
+            </div>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
